--- a/.github/workflows/main_couch-api.yml
+++ b/.github/workflows/main_couch-api.yml
@@ -7,9 +7,12 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches: 
+      - main
 
 jobs:
-  build-and-deploy:
+  build-test-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,6 +25,9 @@ jobs:
 
     - name: Build with dotnet
       run: dotnet build --configuration Release
+    
+    - name: Test with dotnet
+      run: dotnet test --configuration Release
 
     - name: dotnet publish
       run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
