--- a/.github/workflows/dev_couch-api.yml
+++ b/.github/workflows/dev_couch-api.yml
@@ -3,12 +3,11 @@ name: Build and test - couch-api
 on:
   push:
     branches:
-      - **
-      - !main
+      - '**'
+      - '!main'
   pull_request:
     branches: 
-      - **
-      - !main
+      - '**'
 
 jobs:
   build-and-test:
